--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.28.1",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1"
