--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
 VITE_GEMINI_API_KEY=AIzaSyCD1dtq-_S9wFRoOFZfWj3XEtAN3IrVCDk
+VITE_FIREBASE_API_KEY=AIzaSyDqHRAthzasJ4ktTbE9bFuS2FOUTnh9x0s
+VITE_FIREBASE_AUTH_DOMAIN=cureai-8b527.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=cureai-8b527
+VITE_FIREBASE_STORAGE_BUCKET=cureai-8b527.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=711215248612
+VITE_FIREBASE_APP_ID=1:711215248612:web:38e3776cce7471ac1968f1
+VITE_FIREBASE_MEASUREMENT_ID=G-YQT9NHJZ4X
+VITE_SERVER=https://cureback-ts.onrender.com
