--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
+    "firebase": "^11.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "react-markdown": "^9.0.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.28.1",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1"
